--- a/learnpage/style.css
+++ b/learnpage/style.css
@@ -1,143 +1,58 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 * {
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
+/* The main container */
+
+.container {
+    width: 80%;
+    margin: auto;
+    margin-top: 2rem;
+    letter-spacing: 0.5px;
+    height: 80%;
+}
+
+
+img {
+    width: 50px;
+    vertical-align: middle;
+    border-style: none;
+    border-radius: 100%;
+}
+/* Styling the msg-header container */
+.msg-header {
+    border: 1px solid #ccc;
+    width: 100%;
+    height: 10%;
+    border-bottom: none;
+    display: inline-block;
+    background-color: #efefef;
     margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    margin: 20px auto;
-    font-family: "Lato";
-    font-weight: 300;
-  }
-  
-  form {
-    padding: 15px 25px;
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-  }
-  
-  form label {
-    font-size: 1.5rem;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.msgimg {
+    margin-left: 2%;
+    float: left;
+}
+
+.container1 {
+    width: 270px;
+    height: auto; 
+    float: left;
+    margin: 0;
+}
+
+/* styling user-name */
+.active {
+    width: 150px;
+    float: left;
+    color: black;
     font-weight: bold;
-  }
-  
-  input {
-    font-family: "Lato";
-  }
-  
-  a {
-    color: #0000ff;
-    text-decoration: none;
-  }
-  
-  a:hover {
-    text-decoration: underline;
-  }
-  
-  #wrapper,
-  #loginform {
-    margin: 0 auto;
-    padding-bottom: 25px;
-    background: #eee;
-    width: 600px;
-    max-width: 100%;
-    border: 2px solid #212121;
-    border-radius: 4px;
-  }
-  
-  #loginform {
-    padding-top: 18px;
-    text-align: center;
-  }
-  
-  #loginform p {
-    padding: 15px 25px;
-    font-size: 1.4rem;
-    font-weight: bold;
-  }
-  
-  #chatbox {
-    text-align: left;
-    margin: 0 auto;
-    margin-bottom: 25px;
-    padding: 10px;
-    background: #fff;
-    height: 300px;
-    width: 530px;
-    border: 1px solid #a7a7a7;
-    overflow: auto;
-    border-radius: 4px;
-    border-bottom: 4px solid #a7a7a7;
-  }
-  
-  #usermsg {
-    flex: 1;
-    border-radius: 4px;
-    border: 1px solid #ff9800;
-  }
-  
-  #name {
-    border-radius: 4px;
-    border: 1px solid #ff9800;
-    padding: 2px 8px;
-  }
-  
-  #submitmsg,
-  #enter{
-    background: #ff9800;
-    border: 2px solid #e65100;
-    color: white;
-    padding: 4px 10px;
-    font-weight: bold;
-    border-radius: 4px;
-  }
-  
-  .error {
-    color: #ff0000;
-  }
-  
-  #menu {
-    padding: 15px 25px;
-    display: flex;
-  }
-  
-  #menu p.welcome {
-    flex: 1;
-  }
-  
-  a#exit {
-    color: white;
-    background: #c62828;
-    padding: 4px 8px;
-    border-radius: 4px;
-    font-weight: bold;
-  }
-  
-  .msgln {
-    margin: 0 0 5px 0;
-  }
-  
-  .msgln span.left-info {
-    color: orangered;
-  }
-  
-  .msgln span.chat-time {
-    color: #666;
-    font-size: 60%;
-    vertical-align: super;
-  }
-  
-  .msgln b.user-name, .msgln b.user-name-left {
-    font-weight: bold;
-    background: #546e7a;
-    color: white;
-    padding: 2px 4px;
-    font-size: 90%;
-    border-radius: 4px;
-    margin: 0 5px 0 0;
-  }
-  
-  .msgln b.user-name-left {
-    background: orangered;
-  }
-  
+    margin: 0 0 0 5px;
+    height: 10%;
+ 
+}
+
